# pushserver

./: CMakeLists.txt  README.md
docs/mermaid/: README.md  architecture.mmd  auth.mmd  authentification.mmd  class_architecture.mmd  desincription.mmd  envoimessage.mmd  recevoir.mmd  sequence.mmd  topiccreation.mmd  topicsuppression.mmd
src/lib/: a.out  filter.c  libwebsocket.c  message.c  notifications.c  notificationservices.c  posgres.c  redis.c  send.c  send_sms  sendmail  sendmail.c  serverlib.c  serveur_websocket  serveur_websockets.c  sms.c  topic.c  unity.c  websocket.c
src/lib/headers/: client.h  filter.h  message.h  notification.h  notificationservices.h  posgres.h  redis.h  topic.h
src/lib/tests/: test_filter.c  test_message.c  test_notification.c  test_notificationservices.c  test_posgres.c  test_topic.c
src/sql/: database.sql  table.sql
src/www/: consumer.html  producer.html  producer2.html
